# gone_cups

./: .gitignore  README.md  pyproject.toml  scratch.ipynb  scratch_cv2.ipynb  scratch_zbar.ipynb  scratch_zbar_loop.py
